fix collapsed spaces in quiz

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -5,7 +5,8 @@ i{display:none}
 body{color:#222;overflow:hidden;position:relative;font-size:16px;content:"w";background:#ddd}     .w{background:#ddd;filter:invert(0)}
 @media(prefers-color-scheme:dark){body[class=""]{content:"g";background:#444;filter:invert(.85)}} .g{background:#444;filter:invert(.85)}
 @media(prefers-contrast:more)    {body[class=""]{content:"b";background:#222;filter:invert(1)  }} .b{background:#222;filter:invert(1)}
-pre,code{font-family:M}
+pre,code{font-family:M;white-space:pre-wrap}
+code
 img{margin-bottom:4px;opacity:90%;}
 #a{position:relative;top:6.5px;height:16px;margin-right:.6ex;border-radius:1em;border:.25ex solid currentcolor;width:16px}
 a{display:inline-block;text-align:center;z-index:1;width:1em;line-height:1em;color:unset;
